Allow line breaks in video table, fix #1270 (#1284)
* Allow line breaks in video table, fix #1270

* Add max height for title


* Add max width and no wrap for presenters


---------

--- a/assets/css/opencast.scss
+++ b/assets/css/opencast.scss
@@ -312,7 +312,9 @@ $action-menu-icon-size: 20px;
                 gap: 5px;
 
                 margin: 0;
-                overflow-wrap: anywhere;
+                hyphens: auto;
+                overflow-wrap: break-word;
+                max-height: 3em;
             }
 
             a {
@@ -325,23 +327,17 @@ $action-menu-icon-size: 20px;
                 row-gap: 5px;
 
                 margin-top: 8px;
-                white-space: nowrap;
                 overflow: auto;
             }
         }
 
-        .oc--date {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
         .oc--presenters {
+            max-width: 200px;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
         }
-
+        
         .oc--metadata--empty {
 
             h2, div {
@@ -353,15 +349,6 @@ $action-menu-icon-size: 20px;
             .tooltip {
                 margin: 5px 0 0 5px;
             }
-        }
-    }
-
-    .oc--sort-options {
-        text-align: right;
-        white-space: nowrap;
-
-        img {
-            cursor: pointer;
         }
     }
 
